--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <h2>Riwayat Hidup</h2>
     <ul>
         <li>TK : SANDA MASUMU</li>
-        <li>SD : SDN. 61 KENDARI</li>
+        <li>SD : SDN 61 KENDARI</li>
         <li>SMP: SMPN 13 KENDARI</li>
         <li>SMA: SMAN 6 KENDARI</li>
         <li>KULIAH : UNIVERSITAS HALU OLEO</li>
     </ul>
 
-    <P> My Wife</P>
+    <P>My Wifey</P>
     <img src = "kim_dami.jpg" alt="foto" class ="gambar">
+    <a href ="https://www.google.com"> kunjugi google</a>
 
 </body>
 </html>
