--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
         <li>KULIAH : UNIVERSITAS HALU OLEO</li>
     </ul>
 
+    <table border="1"> 
+        <tr>
+            <th>nama</th>
+            <th>usia</th>
+            <th>kota</th>
+        </tr>
+            <th>musar</th>
+            <th>19</th>
+            <th>kendari</th>
+    </table>
+
     <P>My Wifey</P>
-    <img src = "kim_dami.jpg" alt="foto" class ="gambar">
+    <img src = "kim_dami.jpg" high ="100" width= "100" alt="foto" class ="gambar">
+    <br>
     <a href ="https://www.google.com"> kunjugi google</a>
 
 </body>
