--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <p>HAI NAMA SAYA MUZHAR MAULANA</p>
     <p> SAYA TINGGAL DI JL.DR SUTOMO LALODATI</p>
     <p>Hobi saya adalah Bermain game khususnya mobile legend</p>
+    <P>My Wifey</P>
+    <img src = "kim_dami.jpg" high ="200" width= "200" alt="foto" class ="gambar">
+    <br>
+    <a href ="https://www.google.com"> kunjugi google</a>
+
 
     <h2>Riwayat Hidup</h2>
     <ul>
@@ -31,11 +36,21 @@
             <th>19</th>
             <th>kendari</th>
     </table>
-
-    <P>My Wifey</P>
-    <img src = "kim_dami.jpg" high ="200" width= "200" alt="foto" class ="gambar">
     <br>
-    <a href ="https://www.google.com"> kunjugi google</a>
+    <form action="">
+        <label for="nama">nama</label>
+        <input type="text">
+    <br>
+        <label for="email">email</label>
+        <input type="email">
+    <br>
+        <label for="password">password</label>
+        <input type="password">
+    <br>
+        <button type="submit">kirim</button>
+    <br>   
+    <br>
+    </form>
 
 </body>
 </html>
