--- a/index.html
+++ b/index.html
@@ -7,53 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>DATA DIRI SAYA</h1>
-    <p>HAI NAMA SAYA MUZHAR MAULANA</p>
-    <p> SAYA TINGGAL DI JL.DR SUTOMO LALODATI</p>
-    <p>Hobi saya adalah Bermain game khususnya mobile legend</p>
-    <P>My Wifey</P>
-    <img src = "kim_dami.jpg" high ="200" width= "200" alt="foto" class ="gambar">
-    <br>
-    <a href ="https://www.google.com"> kunjugi google</a>
-
-
-    <h2>Riwayat Hidup</h2>
-    <ul>
-        <li>TK : SANDA MASUMU</li>
-        <li>SD : SDN 61 KENDARI</li>
-        <li>SMP: SMPN 13 KENDARI</li>
-        <li>SMA: SMAN 6 KENDARI</li>
-        <li>KULIAH : UNIVERSITAS HALU OLEO</li>
-    </ul>
-
-    <table border="1"> 
-        <tr>
-            <th>nama</th>
-            <th>usia</th>
-            <th>kota</th>
-        </tr>
-            <th>musar</th>
-            <th>19</th>
-            <th>kendari</th>
-    </table>
-    <br>
-    <form action="">
-        <label for="nama">nama</label>
-        <input type="text">
-    <br>
-        <label for="email">email</label>
-        <input type="email">
-    <br>
-        <label for="password">password</label>
-        <input type="password">
-    <br>
-        <button type="submit">kirim</button>
-    <br>   
-    <br>
-    </form>
-    <br>
-    <a href ="https://www.google.com"> kunjugi google</a>
-
+    <div class="cv-container">
+        <div class="left-section">
+            <img src="kim_dami.jpg" alt="Foto Muzhar">
+            <h2>Muzhar Maulana</h2>
+            <p>Mahasiswa</p>
+            <div class="profile">
+                <h3>Profil</h3>
+                <p>Saya tinggal di Jl. Dr. Sutomo Lalodati dan memiliki hobi bermain game, khususnya Mobile Legends.</p>
+            </div>
 </body>
 </html>
