--- a/index.html
+++ b/index.html
@@ -7,14 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="cv-container">
-        <div class="left-section">
-            <img src="kim_dami.jpg" alt="Foto Muzhar">
-            <h2>Muzhar Maulana</h2>
-            <p>Mahasiswa</p>
-            <div class="profile">
-                <h3>Profil</h3>
-                <p>Saya tinggal di Jl. Dr. Sutomo Lalodati dan memiliki hobi bermain game, khususnya Mobile Legends.</p>
+    <body>
+        <div class="cv-container">
+            <div class="left-section">
+                <img src="kim_dami.jpg" alt="Foto Muzhar">
+                <h2>Muzhar Maulana</h2>
+                <p>Mahasiswa</p>
+                <div class="profile">
+                    <h3>Profil</h3>
+                    <p>Saya tinggal di Jl. Dr. Sutomo Lalodati dan memiliki hobi bermain game, khususnya Mobile Legends.</p>
+                </div>
             </div>
+            <div class="right-section">
+                <h2>Riwayat Pendidikan</h2>
+                <ul>
+                    <li>Universitas Halu Oleo</li>
+                    <li>SMAN 6 Kendari</li>
+                    <li>SMPN 13 Kendari</li>
+                    <li>SDN 61 Kendari</li>
+                    <li>TK Sanda Masumu</li>
+                </ul>
+            </div>
+        </div>
+    </body>
+    </html>
+    
 </body>
 </html>
