--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <body>
-        <div class="cv-container">
-            <div class="left-section">
-                <img src="kim_dami.jpg" alt="Foto Muzhar">
-                <h2>Muzhar Maulana</h2>
-                <p>Mahasiswa</p>
-                <div class="profile">
-                    <h3>Profil</h3>
-                    <p>Saya tinggal di Jl. Dr. Sutomo Lalodati dan memiliki hobi bermain game, khususnya Mobile Legends.</p>
+    <div class="cv-container">
+        <div class="left-section">
+            <img src="kim_dami.jpg" alt="Foto Muzhar">
+            <h2>Muzharrrr</h2>
+            <p>Mahasiswa</p>
+            <div class="profile">
+                <h3>DATA PRIBADI</h3>
+                <div class="nama-container">
+                    <p class="label">Nama :</p>
+                    <p class="value">Muzhar Maulana</p>
+                    
                 </div>
             </div>
-            <div class="right-section">
-                <h2>Riwayat Pendidikan</h2>
-                <ul>
-                    <li>Universitas Halu Oleo</li>
-                    <li>SMAN 6 Kendari</li>
-                    <li>SMPN 13 Kendari</li>
-                    <li>SDN 61 Kendari</li>
-                    <li>TK Sanda Masumu</li>
-                </ul>
-            </div>
         </div>
-    </body>
-    </html>
-    
+        <div class="right-section">
+            <h1>Riwayat Pendidikan</h1>
+            <ul>
+                <li>Universitas Halu Oleo</li>
+                <li>SMAN 6 Kendari</li>
+                <li>SMPN 13 Kendari</li>
+                <li>SDN 61 Kendari</li>
+                <li>TK Sanda Masumu</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
