--- a/index.html
+++ b/index.html
@@ -11,26 +11,43 @@
         <div class="left-section">
             <img src="kim_dami.jpg" alt="Foto Muzhar">
             <h2>Muzharrrr</h2>
-            <p>Mahasiswa</p>
+            <br>
+            <br>
             <div class="profile">
                 <h3>DATA PRIBADI</h3>
+                <br>
                 <div class="nama-container">
                     <p class="label">Nama :</p>
                     <p class="value">Muzhar Maulana</p>
-                    
+                    <br>
+                    <p class="label">Tempat, Tgl lahir :</p>
+                    <p class="value">Kendari 25 January 2006</p>
+                    <br>
+                    <p class="label">Alamat :</p>
+                    <p class="value">Jl. Dr. Sutomo</p>
                 </div>
             </div>
         </div>
         <div class="right-section">
-            <h1>Riwayat Pendidikan</h1>
-            <ul>
-                <li>Universitas Halu Oleo</li>
-                <li>SMAN 6 Kendari</li>
-                <li>SMPN 13 Kendari</li>
-                <li>SDN 61 Kendari</li>
-                <li>TK Sanda Masumu</li>
-            </ul>
-        </div>
+            <div class="riwayat-container">
+                <h2>Riwayat Pendidikan</h2>
+                <ul>
+                    <li>Universitas Halu Oleo</li>
+                    <li>SMAN 6 Kendari</li>
+                    <li>SMPN 13 Kendari</li>
+                    <li>SDN 61 Kendari</li>
+                    <li>TK Sanda Masumu</li>
+                </ul>
+            </div>     
+            <div class="kontak-container">
+                <h2>Kontak</h2>
+                <ul>
+                    <li>Email: example@email.com</li>
+                    <li>Telepon: 0812-3456-7890</li>
+                    <li>Alamat: Jl. Dr. Sutomo, Kendari</li>
+                </ul>
+            </div> 
+        </div>       
     </div>
 </body>
 </html>
