--- a/index.html
+++ b/index.html
@@ -11,24 +11,14 @@
         <div class="left-section">
             <img src="kim_dami.jpg" alt="Foto Muzhar">
             <h2>Muzharrrr</h2>
-            <br>
-            <br>
-            <div class="profile">
-                <h3>DATA PRIBADI</h3>
-                <br>
-                <div class="nama-container">
-                    <p class="label">Nama :</p>
-                    <p class="value">Muzhar Maulana</p>
-                    <br>
-                    <p class="label">Tempat, Tgl lahir :</p>
-                    <p class="value">Kendari 25 January 2006</p>
-                    <br>
-                    <p class="label">Alamat :</p>
-                    <p class="value">Jl. Dr. Sutomo</p>
-                </div>
-            </div>
         </div>
         <div class="right-section">
+            <div class="profile">
+                <h2>Data Pribadi</h2>
+                <p><strong>Nama :</strong> Muzhar Maulana</p>
+                <p><strong>Tempat, Tgl lahir :</strong> Kendari 25 January 2006</p>
+                <p><strong>Alamat :</strong> Jl. Dr. Sutomo</p>
+            </div>
             <div class="riwayat-container">
                 <h2>Riwayat Pendidikan</h2>
                 <ul>
@@ -42,12 +32,33 @@
             <div class="kontak-container">
                 <h2>Kontak</h2>
                 <ul>
-                    <li>Email: example@email.com</li>
-                    <li>Telepon: 0812-3456-7890</li>
-                    <li>Alamat: Jl. Dr. Sutomo, Kendari</li>
+                    <li>Email   : Musarmaulana@gmail.com</li>
+                    <li>Telepon : 0812-3456-7890</li>
+                    <li>Alamat  : Jl. Dr. Sutomo, Kendari</li>
                 </ul>
+                <a href="hubungi.html" class="btn-hubungi">Hubungi</a>
             </div> 
         </div>       
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Cek apakah ada parameter status=success di URL
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get("status") === "success") {
+                let successMessage = document.getElementById("success-message");
+                successMessage.style.display = "block";
+
+                // Sembunyikan setelah 3 detik
+                setTimeout(() => {
+                    successMessage.style.display = "none";
+
+                    // Hapus parameter status dari URL tanpa reload halaman
+                    const newUrl = window.location.origin + window.location.pathname;
+                    window.history.replaceState({}, document.title, newUrl);
+                }, 3000);
+            }
+        });
+    </script>
 </body>
 </html>
