--- a/index.html
+++ b/index.html
@@ -44,21 +44,36 @@
 
             <div class="riwayat-container fade-in section-hover">
                 <h2 class="section-title">Riwayat Pendidikan</h2>
-                <ul>
-                    <li>Universitas Halu Oleo</li>
-                    <li>SMAN 6 Kendari</li>
-                    <li>SMPN 13 Kendari</li>
-                    <li>SDN 61 Kendari</li>
-                    <li>TK Sanda Masumu</li>
-                </ul>
+                <table border="1" cellpadding="10" cellspacing="0">
+                    <tr>
+                        <th>Jenjang</th>
+                        <th>Institusi</th>
+                    </tr>
+                    <tr>
+                        <td>Universitas</td>
+                        <td>Universitas Halu Oleo</td>
+                    </tr>
+                    <tr>
+                        <td>SMA</td>
+                        <td>SMAN 6 Kendari</td>
+                    </tr>
+                    <tr>
+                        <td>SMP</td>
+                        <td>SMPN 13 Kendari</td>
+                    </tr>
+                    <tr>
+                        <td>SD</td>
+                        <td>SDN 61 Kendari</td>
+                    </tr>
+                    <tr>
+                        <td>TK</td>
+                        <td>TK Sanda Masumu</td>
+                    </tr>
+                </table>
             </div>     
 
             <div class="kontak-container section-hover">
-                <h2 class="section-title">Kontak</h2>
-                <ul>
-                    <li>Email   : Musarmaulana@gmail.com</li>
-                    <li>Telepon : 0812-3456-7890</li>
-                </ul>
+                <h2 class="section-title"><a href="hubungi.html" style="text-decoration: none; color: black;">Tekan untuk menghubungi</a></h2>
             </div> 
 
         </div>       
