--- a/hubungi.html
+++ b/hubungi.html
@@ -4,100 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hubungi Saya</title>
-    <style>
-        /* Styling umum */
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #29307a, #2575fc);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        /* Container Form */
-        .form-container {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-            width: 350px;
-            text-align: center;
-            animation: fadeIn 0.5s ease-in-out;
-        }
-
-        /* Animasi Fade In */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Label */
-        .form-container label {
-            font-size: 14px;
-            color: #555;
-            display: block;
-            text-align: left;
-            margin-bottom: 5px;
-        }
-
-        /* Input dan Textarea */
-        .form-container input,
-        .form-container textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 14px;
-            transition: 0.3s;
-        }
-
-        .form-container input:focus,
-        .form-container textarea:focus {
-            border-color: #2575fc;
-            outline: none;
-            box-shadow: 0px 0px 5px rgba(37, 117, 252, 0.5);
-        }
-
-        /* Tombol Kirim */
-        .form-container button {
-            width: 100%;
-            padding: 10px;
-            background: #2575fc;
-            border: none;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        .form-container button:hover {
-            background: #1e5bc4;
-        }
-
-        /* Responsif */
-        @media (max-width: 400px) {
-            .form-container {
-                width: 90%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="form-container">
         <h2>Hubungi Saya</h2>
-        <form id="contactForm">
+        <form action="submit_form.php" method="POST">
             <label for="nama">Nama:</label>
             <input type="text" id="nama" name="nama" required>
 
@@ -110,12 +22,5 @@
             <button type="submit">Kirim</button>
         </form>
     </div>
-
-    <script>
-        document.getElementById("contactForm").addEventListener("submit", function(event) {
-            event.preventDefault(); // Mencegah pengiriman formulir ke server
-            window.location.href = "index.html"; // Arahkan ke index.html
-        });
-    </script>
 </body>
 </html>
