--- a/hubungi.html
+++ b/hubungi.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2>Hubungi Saya</h2>
-        <form action="submit_form.php" method="POST">
+        <form id="contactForm">
             <label for="nama">Nama:</label>
             <input type="text" id="nama" name="nama" required>
 
@@ -22,5 +22,17 @@
             <button type="submit">Kirim</button>
         </form>
     </div>
+
+    <script>
+        document.getElementById("contactForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Mencegah pengiriman form ke server
+
+            // Menampilkan pesan konfirmasi
+            alert("Pesan Anda telah dikirim!");
+
+            // Mengarahkan kembali ke index.html
+            window.location.href = "index.html";
+        });
+    </script>
 </body>
 </html>
